--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 Time_Series_Forecasting/__pycache__
-Payment_Fraud_Detection/creditcard.csv
-Payment_Fraud_Detection/creditcardfraud.zip
+*.csv
+
 env.sh
 .github/**
 .ipynb_checkpoints/
 Population_Segmentation/.ipynb_checkpoints/*
 Population_Segmentation/.ipynb_checkpoints/Pop_Segmentation_Exercise-checkpoint.ipynb
-Time_Series_Forecasting/household_power_consumption.txt
-Time_Series_Forecasting/household-electric-power-consumption.zip
-Project_Plagiarism_Detection/data/.DS_Store
-Project_Plagiarism_Detection/__pycache__/helpers.cpython-38.pyc
-Project_Plagiarism_Detection/__pycache__/problem_unittests.cpython-38.pyc
+*.txt
+*.zip
+.DS_Store
+
+*.pyc
