--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Population_Segmentation/.ipynb_checkpoints/Pop_Segmentation_Exercise-checkpoint.
 .DS_Store
 
 *.pyc
+Project_Plagiarism_Detection/Notes.ipynb
