--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ Population_Segmentation/.ipynb_checkpoints/Pop_Segmentation_Exercise-checkpoint.
 .DS_Store
 
 *.pyc
+Project_Plagiarism_Detection/submission
 Project_Plagiarism_Detection/Notes.ipynb
